--- a/WindowClassProject.csproj
+++ b/WindowClassProject.csproj
@@ -41,6 +41,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Linq, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Linq.4.3.0\lib\net463\System.Linq.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +56,21 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Xceed.Wpf.AvalonDock, Version=4.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\Extended.Wpf.Toolkit.4.0.2\lib\net40\Xceed.Wpf.AvalonDock.dll</HintPath>
+    </Reference>
+    <Reference Include="Xceed.Wpf.AvalonDock.Themes.Aero, Version=4.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\Extended.Wpf.Toolkit.4.0.2\lib\net40\Xceed.Wpf.AvalonDock.Themes.Aero.dll</HintPath>
+    </Reference>
+    <Reference Include="Xceed.Wpf.AvalonDock.Themes.Metro, Version=4.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\Extended.Wpf.Toolkit.4.0.2\lib\net40\Xceed.Wpf.AvalonDock.Themes.Metro.dll</HintPath>
+    </Reference>
+    <Reference Include="Xceed.Wpf.AvalonDock.Themes.VS2010, Version=4.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\Extended.Wpf.Toolkit.4.0.2\lib\net40\Xceed.Wpf.AvalonDock.Themes.VS2010.dll</HintPath>
+    </Reference>
+    <Reference Include="Xceed.Wpf.Toolkit, Version=4.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\Extended.Wpf.Toolkit.4.0.2\lib\net40\Xceed.Wpf.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\Program.cs" />
@@ -79,7 +100,13 @@
     <Compile Include="Model\SemesterModel.cs" />
     <Compile Include="Model\StudentModel.cs" />
     <Compile Include="Model\TeacherModel.cs" />
+    <Compile Include="Model\ThemeColor.cs" />
     <Compile Include="Model\UserAccount.cs" />
+    <Compile Include="MyLinQ.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MyLinQ.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\OtherForm\AddPerson.cs">
       <SubType>UserControl</SubType>
@@ -117,6 +144,12 @@
     <Compile Include="View\ViewCourse\ManageCourseFast.Designer.cs">
       <DependentUpon>ManageCourseFast.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\ViewGroupSubject\AddStudentToGroupPanelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewGroupSubject\AddStudentToGroupPanelForm.Designer.cs">
+      <DependentUpon>AddStudentToGroupPanelForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\ViewLogin\ForgotPasswordForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +174,30 @@
     <Compile Include="View\ViewMangeAll\ManageForm.Designer.cs">
       <DependentUpon>ManageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\ViewScore\AddScorePanelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewScore\AddScorePanelForm.Designer.cs">
+      <DependentUpon>AddScorePanelForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewScore\AverageByCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewScore\AverageByCourse.Designer.cs">
+      <DependentUpon>AverageByCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewScore\EditScorePanelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewScore\EditScorePanelForm.Designer.cs">
+      <DependentUpon>EditScorePanelForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewScore\LiveChartScore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewScore\LiveChartScore.Designer.cs">
+      <DependentUpon>LiveChartScore.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\ViewScore\Score_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +221,36 @@
     </Compile>
     <Compile Include="View\ViewStudent\StudentPanelOfTeacher.Designer.cs">
       <DependentUpon>StudentPanelOfTeacher.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewTeacher\AddClassForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewTeacher\AddClassForm.Designer.cs">
+      <DependentUpon>AddClassForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewTeacher\AddGroupSubjectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewTeacher\AddGroupSubjectForm.Designer.cs">
+      <DependentUpon>AddGroupSubjectForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewTeacher\AddTeacherForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewTeacher\AddTeacherForm.Designer.cs">
+      <DependentUpon>AddTeacherForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewTeacher\ClassPanelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewTeacher\ClassPanelForm.Designer.cs">
+      <DependentUpon>ClassPanelForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewTeacher\TeacherForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewTeacher\TeacherForm.Designer.cs">
+      <DependentUpon>TeacherForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -205,6 +292,9 @@
     <EmbeddedResource Include="View\ViewMangeAll\ManageForm.resx">
       <DependentUpon>ManageForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewScore\Score_Form.resx">
+      <DependentUpon>Score_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\ViewStudent\AddStudentPanelForm.resx">
       <DependentUpon>AddStudentPanelForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,6 +304,29 @@
     <EmbeddedResource Include="View\ViewStudent\StudentPanelOfTeacher.resx">
       <DependentUpon>StudentPanelOfTeacher.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewTeacher\AddClassForm.resx">
+      <DependentUpon>AddClassForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewTeacher\AddGroupSubjectForm.resx">
+      <DependentUpon>AddGroupSubjectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewTeacher\AddTeacherForm.resx">
+      <DependentUpon>AddTeacherForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewTeacher\ClassPanelForm.resx">
+      <DependentUpon>ClassPanelForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewTeacher\TeacherForm.resx">
+      <DependentUpon>TeacherForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="MyLinQ.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>MyLinQ.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MyLinQ.dbml.layout">
+      <DependentUpon>MyLinQ.dbml</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -229,8 +342,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="View\ViewGroupSubject\" />
-    <Folder Include="View\ViewTeacher\" />
+    <None Include="Resources\icons8_edit_30px.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8_user_male_50px.png" />
@@ -368,6 +480,18 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_remove_30px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_reset_30px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_show_sidepanel_30px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
