--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="Bunifu.Charts.WinForms" version="1.0.2" targetFramework="net472" />
+  <package id="Bunifu.Dataviz.WinForms" version="2.1.6" targetFramework="net472" />
+  <package id="Bunifu.UI.WinForms" version="5.0.6" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
