--- a/WindowClassProject.csproj
+++ b/WindowClassProject.csproj
@@ -270,6 +270,12 @@
     <Compile Include="View\ViewLogin\RegisterForm.Designer.cs">
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\ViewManageOfStudent\AllStudentManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewManageOfStudent\AllStudentManage.Designer.cs">
+      <DependentUpon>AllStudentManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\ViewManageOfStudent\StudentManageForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -403,6 +409,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\ViewLogin\RegisterForm.resx">
       <DependentUpon>RegisterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewManageOfStudent\AllStudentManage.resx">
+      <DependentUpon>AllStudentManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\ViewManageOfStudent\StudentManageForm.resx">
       <DependentUpon>StudentManageForm.cs</DependentUpon>
@@ -646,6 +655,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8_delete_30px_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_plus_math_30px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
