--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="Bunifu.Dataviz.WinForms" version="2.1.6" targetFramework="net472" />
   <package id="Bunifu.UI.WinForms" version="5.0.6" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
+  <package id="FreeSpire.Doc" version="7.11.0" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
 </packages>
